--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,27 +1,59 @@
 security:
-    enable_authenticator_manager: true
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
-    password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
-    providers:
-        users_in_memory: { memory: null }
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            lazy: true
-            provider: users_in_memory
+  enable_authenticator_manager: true
+  # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+  password_hashers:
+    Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+    App\Entity\Client:
+      algorithm: auto
+    App\Entity\Employe:
+      algorithm: auto
+  # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+  providers:
+    app_employee_provider:
+      entity:
+        class: App\Entity\Employe
+        property: email
+    app_user_provider:
+      entity:
+        class: App\Entity\Client
+        property: email
+    chain_provider:
+      chain:
+        providers: [ app_employee_provider, app_user_provider ]
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+  # https://stackoverflow.com/questions/57574539/not-configuring-explicitly-the-provider-for-the-guard-listener-on-x-firewall
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
+    login:
+      pattern: ^/api/login
+      stateless: true
+      provider: chain_provider
+      json_login:
+        check_path: /api/login_check
+        success_handler: lexik_jwt_authentication.handler.authentication_success
+        failure_handler: lexik_jwt_authentication.handler.authentication_failure
+    api:
+      pattern: ^/api
+      stateless: true
+      provider: chain_provider
+      jwt: ~
+
+      # activate different ways to authenticate
+      # https://symfony.com/doc/current/security.html#the-firewall
+
+      # https://symfony.com/doc/current/security/impersonating_user.html
+      # switch_user: true
+
+  # Easy way to control access for large sections of your site
+  # Note: Only the *first* access control that matches will be used
+  access_control:
+    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/roles, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/employees, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/products, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/categories, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY, methods: [ GET, POST, PUT, DELETE ] }
