--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,5 +21,9 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
+    acme_api.event.jwt_created_listener:
+        class: App\Events\JWTCreatedListener
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
