--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=550c268b2480992e2a03d6268b2d24c6
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/afterwork_db_2?serverVersion=5.7"
+DATABASE_URL="mysql://root:@localhost:3306/afterwork_db_2"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
