--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -54,6 +54,12 @@ security:
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
     - { path: ^/api/roles, roles: PUBLIC_ACCESS, methods: [ GET ] }
     - { path: ^/api/employees, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/clients, roles: PUBLIC_ACCESS, methods: [ GET, POST ] }
+    - { path: ^/api/clients/newsletter, roles: PUBLIC_ACCESS, methods: [ GET, PUT ] }
     - { path: ^/api/products, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/comments, roles: PUBLIC_ACCESS, methods: [ GET, PUT ] }
     - { path: ^/api/categories, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/articles, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/rubrics, roles: PUBLIC_ACCESS, methods: [ GET ] }
+    - { path: ^/api/declinaisons, roles: PUBLIC_ACCESS, methods: [ GET ] }
     - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY, methods: [ GET, POST, PUT, DELETE ] }
